# Loom

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp  main3d.cpp
src/audio/: WindSoundSynthesizer.cpp  WindSoundSynthesizer.hpp
src/core/: Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp
src/entities/: Camera3D.cpp  Camera3D.hpp  Character.cpp  Character.hpp  Character3D.cpp  Character3D.hpp  FlightController.cpp  FlightController.hpp  FlightController3D.cpp  FlightController3D.hpp
src/environment/: Terrain.cpp  Terrain.hpp
src/physics/: Cape.cpp  Cape.hpp  Cape3D.cpp  Cape3D.hpp  VerletConstraint.cpp  VerletConstraint.hpp  VerletParticle.cpp  VerletParticle.hpp  VerletParticle3D.cpp  VerletParticle3D.hpp  WindField.cpp  WindField.hpp  WindField3D.cpp  WindField3D.hpp
src/rendering/: EnergyBeingRenderer.cpp  EnergyBeingRenderer.hpp  EnvironmentRenderer.cpp  EnvironmentRenderer.hpp  Renderer.cpp  Renderer.hpp  Renderer3D.cpp  Renderer3D.hpp
src/utils/: PerformanceMonitor.cpp  PerformanceMonitor.hpp  PerlinNoise.cpp  PerlinNoise.hpp
tools/: requirements.txt  wind_map_generator.py
